[tool.poetry]
name = "pyfieldcrypt"
version = "0.1.0"
description = "python tool for encrypting data at the field level"
authors = ["Louis <gamemaniaz@hotmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
pylint = "^2.15.3"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
